--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5"
   },
- "scripts": {
-  "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-  "build": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-  "test": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts test",
+  "scripts": {
+  "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+  "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+  "test": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts test",
   "eject": "react-scripts eject"
 }
 ,
@@ -45,5 +45,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
